Basic SVG Animation working.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nova-engine/ecs": "^1.1.1",
     "@types/webgl2": "0.0.5",
     "bootstrap": "^4.4.1",
+    "lottie-web": "^5.7.6",
     "rxjs": "~6.5.4",
     "three": "^0.113.2",
     "tslib": "^1.10.0",
@@ -38,6 +39,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "bodymovin": "^4.13.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
