--- a/src/web.staging.config
+++ b/src/web.staging.config
@@ -30,7 +30,7 @@
                     <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                     <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                 </conditions>
-                <action type="Rewrite" url="/aero.und.edu/aviation/trainers/one-engine-inoperative-aerodynamics/" />
+                <action type="Rewrite" url="/edingeldein/one-engine-inop/" />
             </rule>
         </rules>
     </rewrite>
